# cmd/handlers/get_user_profile_info.go
@@ -12,18 +12,35 @@ func (h *handlers) GetUserProfileInfo(
 	ctx context.Context,
 	req *proto.GetUserProfileInfoRequest,
 ) (_ *proto.GetUserProfileInfoResponse, err error) {
+	if err = req.Validate(); err != nil {
+		h.logger.Error("Error Validate")
+		return nil, err
+	}
+
 	var user = &entities.User{}
 	if user, err = h.userService.GetByID(ctx, req.ProfileId); err != nil {
-		h.logger.Error("userService.GetByID", zap.Error(err))
+		h.logger.Error("Error userService.GetByID", zap.Error(err))
+		return nil, errs.InternalServerError
+	}
+
+	var friendsCount int64
+	if friendsCount, err = h.userService.GetFriendsCountByID(ctx, user.ID); err != nil {
+		h.logger.Error("Error userService.GetFriendsCountByID", zap.Error(err))
+		return nil, errs.InternalServerError
+	}
+
+	var photosCount int64
+	if photosCount, err = h.photoService.GetPhotosCountByUserID(ctx, user.ID); err != nil {
+		h.logger.Error("Error photoService.GetPhotosCountByUserID", zap.Error(err))
 		return nil, errs.InternalServerError
 	}
 
 	return &proto.GetUserProfileInfoResponse{UserProfile: &proto.UserProfile{
 		Id:             user.ID,
 		Name:           user.Name,
-		Photo:          user.Avatar,
+		Avatar:         user.Avatar,
 		RegisteredAt:   user.CreatedAt.Unix(),
-		FollowersCount: 0,
-		PhotosCount:    0,
+		FollowersCount: friendsCount,
+		PhotosCount:    photosCount,
 	}}, nil
 }
